
No release numbers
------------------
 - Tue May 30 22:32:31 UTC 2000
   - Added lock around tx seqnum to prevent that race when transmitting
       from diverse threads. (actually committed earlier today)
   - Added aim_meta.c and a few constants and things to keep
       track of "releases".  
   - Added mkbuildinfo.sh to automatically update build string
       "constants" on every invocation of 'make all'.

 - Mon May 29 12:08:28 GMT 2000
   - Rearranged aim_tx_flushqueue(); moved write operation 
       to aim_tx_sendframe()
   - Turned aim_tx_enqueue() into a macro that calls sess->tx_enqueue,
       a function pointer to whatever you want to use to enqueue
       things for transmition (or not)
   - Old aim_tx_enqueue becomes aim_tx_enqueue__queuebased.  Added
       aim_tx_enqueue__immediate for doing immediate writes.  Default
       is to use queue-based procedure.
   - Cleaned up parts of aim_conn.c
   - Added locking around the sockets themselves.  Should allow
       for full cross-thread usage.
     - Unfortunatly, only pthreads are supported at this time.
       If you don't have pthreads on your arch, implement the
       macros your arch needs and send me a patch.  (A SysV
       semaphore implementation would be trivial, as would a 
       simple integer-based lock.)

 - Sun May 21 14:59:20 GMT 2000
   - Added infotype parameter to aim_getinfo() for requesting
       different types of messages.  AIM_GETINFO_GENERALINFO
       will get you the normal stuff, AIM_GETINFO_AWAYMESSAGE
       will get the normal stuff, with the profile replaced with
       the user's away message.  Also, the callback adds an 
       unsigned short to the end to give you the value that
       was originally passed to the request.
   - There were a few server-pertinent changes that didn't get 
       documented from last month.  I have no idea what they were.

 - Sun Apr  2 07:29:11 UTC 2000
   - Redid much of the tx path to remove the superfluous copy.  But